--- a/Src/UI/insert_DATA.ui
+++ b/Src/UI/insert_DATA.ui
@@ -385,32 +385,10 @@ border-radius:20px</string>
        <bool>false</bool>
       </property>
       <property name="maximum">
-       <double>1.000000000000000</double>
+       <double>999999.999999</double>
       </property>
       <property name="singleStep">
-       <double>0.100000000000000</double>
-      </property>
-     </widget>
-     <widget class="QSpinBox" name="float_integerspinBox">
-      <property name="geometry">
-       <rect>
-        <x>20</x>
-        <y>30</y>
-        <width>101</width>
-        <height>121</height>
-       </rect>
-      </property>
-      <property name="cursor">
-       <cursorShape>ArrowCursor</cursorShape>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">font: 12pt &quot;Terminal&quot;;</string>
-      </property>
-      <property name="maximum">
-       <number>999999999</number>
-      </property>
-      <property name="value">
-       <number>1000</number>
+       <double>1</double>
       </property>
      </widget>
      <widget class="QLabel" name="label_9">
@@ -424,9 +402,6 @@ border-radius:20px</string>
       </property>
       <property name="styleSheet">
        <string notr="true">font: 75 12pt &quot;Terminal&quot;;</string>
-      </property>
-      <property name="text">
-       <string>+</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
@@ -443,9 +418,6 @@ border-radius:20px</string>
       </property>
       <property name="styleSheet">
        <string notr="true">font: 12pt &quot;Terminal&quot;;</string>
-      </property>
-      <property name="text">
-       <string>Integer</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
